# kinema

./: Cargo.toml  README.md  robot.urdf  rustfmt.toml
.helix/: languages.toml
examples/: no_std.rs  six_dof.rs
kinema/: Cargo.toml
kinema-macro/: Cargo.toml
kinema-macro/src/: lib.rs
kinema/examples/: macro.rs  no_std.rs
kinema/src/: joint.rs  kinematics.rs  lib.rs  node.rs  trajectory.rs  visual.rs
kinema/src/ik/: jacobian.rs
kinema/src/trajectory/: cart_trapezoidal.rs  joint_trapezoidal.rs
src/: ik.rs  joint.rs  kinematics.rs  lib.rs  node.rs  trajectory.rs  visual.rs
src/ik/: analytical.rs  jacobian.rs
src/trajectory/: cart_trapezoidal.rs  circ_trapezoidal.rs  joint_trapezoidal.rs
