[package]
name = "kinema"
version = "0.2.0"
edition = "2024"
description = "no_std robot kinematics library for bare-metal embedded systems."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/RattlingJester/kinema.git"
keywords = ["kinematics", "embedded"]

[dependencies]
defmt = { version = "1.0.1", optional = true }

nalgebra = { version = "0.34.2", default-features = false, features = ["libm", "defmt"] }
simba = { version = "0.9.1", default-features = false, features = ["libm"] }

[features]
defmt = ["dep:defmt"]
