[package]
name = "kinema"
version = "0.2.0"
edition = "2024"
description = "no_std robot kinematics library for bare-metal embedded systems."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/RattlingJester/kinema.git"
keywords = ["kinematics", "embedded"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
urdf-rs = { version = "0.9.0", optional = true }

heapless = { version = "0.9.3"}
nalgebra = { version = "0.34.2", default-features = false, features = ["libm"] }
simba = { version = "0.9.1", default-features = false, features = ["libm"] }

thiserror = { version = "2.0.17", default-features = false }

[features]
default = []
std = []
defmt = ["dep:defmt", "heapless/defmt", "nalgebra/defmt"]
urdf = ["dep:urdf-rs", "visuals"]
visuals = ["std"]

[[example]]
name = "six_dof"
# required-features = []
